objects/Customer_Note__c.object
<CustomObject>
    <fields>
        <fullName>Collection_Notes_ID__c</fullName>
        <label>Collection Notes ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Customer_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <label>Customer ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Site_ID__c</fullName>
        <label>Customer Site ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Site</label>
        <referenceTo>Customer_Site__c</referenceTo>
        <relationshipName>Customer_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_System_ID__c</fullName>
        <label>Customer System ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer System</label>
        <referenceTo>Customer_Systems__c</referenceTo>
        <relationshipName>Customer_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Gen_Notes_ID__c</fullName>
        <externalId>true</externalId>
        <label>Gen Notes ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ISNewSafe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ISNewSafe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsNew_SVC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsNew SVC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Safe_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Safe Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Notes_ID__c</fullName>
        <externalId>true</externalId>
        <label>Job Notes ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>16384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVC_JOB__c</fullName>
        <label>SVC/JOB</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Notes_ID__c</fullName>
        <externalId>true</externalId>
        <label>Service Notes ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Ticket_Number__c</fullName>
        <label>Service Ticket Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>COL</fullName>
                </value>
                <value>
                    <fullName>GEN</fullName>
                </value>
                <value>
                    <fullName>JOB</fullName>
                </value>
                <value>
                    <fullName>SVC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Customer Note</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Member_Experience_Customer_Note</fullName>
        <filterScope>Queue</filterScope>
        <label>Member Experience</label>
        <queue>Member_Experience</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Customer Notes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>